revert HttpClientTests changes