@@ -46,11 +46,9 @@
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.http.serializer=ALL-UNNAMED
       --add-exports io.clientcore.core/io.clientcore.core.implementation.utils=ALL-UNNAMED
-      --add-opens annotation.processor.test/io.clientcore.annotation.processor.test.shared=ALL-UNNAMED
-      --add-exports annotation.processor.test/io.clientcore.annotation.processor.test.shared=ALL-UNNAMED
-      --add-exports annotation.processor.test/io.clientcore.annotation.processor.test.shared=io.clientcore.core
-      --add-opens annotation.processor.test/io.clientcore.annotation.processor.test.shared=io.clientcore.core
-  </javaModulesSurefireArgLine>
+
+      --add-opens io.clientcore.http.okhttp3/io.clientcore.http.okhttp3=ALL-UNNAMED
+    </javaModulesSurefireArgLine>
   </properties>
 
   <dependencies>
@@ -59,8 +57,20 @@
       <artifactId>core</artifactId>
       <version>1.0.0-beta.8</version> <!-- {x-version-update;unreleased_io.clientcore:core;dependency} -->
     </dependency>
+    <dependency>
+      <groupId>io.clientcore</groupId>
+      <artifactId>http-okhttp3</artifactId>
+      <version>1.0.0-beta.3</version> <!-- {x-version-update;io.clientcore:http-okhttp3;current} -->
+    </dependency>
 
     <!-- Test dependencies -->
+    <dependency>
+      <groupId>io.clientcore</groupId>
+      <artifactId>core</artifactId>
+      <version>1.0.0-beta.8</version> <!-- {x-version-update;unreleased_io.clientcore:core;dependency} -->
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
@@ -89,12 +99,6 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
       <version>5.11.2</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.conscrypt</groupId>
-      <artifactId>conscrypt-openjdk-uber</artifactId>
-      <version>2.5.2</version> <!-- {x-version-update;org.conscrypt:conscrypt-openjdk-uber;external_dependency} -->
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -142,37 +146,8 @@
               </excludes>
             </configuration>
           </execution>
-
-          <execution>
-            <id>run-annotation-processing-test</id>
-            <phase>generate-test-sources</phase>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-            <configuration>
-              <source>1.8</source>
-              <target>1.8</target>
-              <release>8</release>
-              <proc>only</proc>
-              <generatedTestSourcesDirectory>${project.build.directory}/generated-test-sources/</generatedTestSourcesDirectory>
-              <annotationProcessorPaths>
-                <annotationProcessorPath>
-                  <groupId>io.clientcore</groupId>
-                  <artifactId>annotation-processor</artifactId>
-                  <version>1.0.0-beta.2</version> <!-- {x-version-update;unreleased_io.clientcore:annotation-processor;dependency} -->
-                </annotationProcessorPath>
-              </annotationProcessorPaths>
-              <annotationProcessors>
-                <annotationProcessor>io.clientcore.annotation.processor.AnnotationProcessor</annotationProcessor>
-              </annotationProcessors>
-              <compilerArgs>
-                <arg>-Xlint:-options</arg>
-              </compilerArgs>
-              <!-- Exclude module-info.java as this is not supported in Java 8 and is not needed by annotation processor -->
-              <useModulePath>false</useModulePath>
-            </configuration>
-          </execution>
         </executions>
+
         <dependencies>
           <dependency>
             <groupId>io.clientcore</groupId>
@@ -199,89 +174,8 @@
               </sources>
             </configuration>
           </execution>
-
-          <execution>
-            <id>add-generated-test-sources</id>
-            <phase>generate-test-sources</phase>
-            <goals>
-              <goal>add-test-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>${basedir}/target/generated-test-sources</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.5.2</version> <!-- {x-version-update;org.apache.maven.plugins:maven-failsafe-plugin;external_dependency} -->
-      </plugin>
-
-      <!-- HttpClientTests is inherited by tests in http-okhttp3 -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.4.2</version> <!-- {x-version-update;org.apache.maven.plugins:maven-jar-plugin;external_dependency} -->
-        <executions>
-          <execution>
-            <id>test-jar</id>
-            <phase>test-compile</phase>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-
-          <execution>
-            <id>default-jar</id>
-            <phase>package</phase>
-            <configuration>
-              <archive>
-                <manifestEntries>
-                  <Multi-Release>true</Multi-Release>
-                </manifestEntries>
-              </archive>
-            </configuration>
-          </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>java12-plus</id>
-      <activation>
-        <jdk>[12,)</jdk>
-      </activation>
-
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.13.0</version> <!-- {x-version-update;org.apache.maven.plugins:maven-compiler-plugin;external_dependency} -->
-            <executions>
-              <execution>
-                <id>java12-plus-mr</id>
-                <goals>
-                  <goal>compile</goal>
-                </goals>
-                <configuration>
-                  <release>12</release>
-                  <compileSourceRoots>
-                    <compileSourceRoot>${project.basedir}/src/main/java12</compileSourceRoot>
-                  </compileSourceRoots>
-                  <multiReleaseOutput>true</multiReleaseOutput>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
